packages/web/styles/base.css
@import url("https://rsms.me/inter/inter.css");
@import url("https://use.typekit.net/cyw3eir.css");

:root {
  --primary-color: #0070f4;
  --secondary-color: #666;
  --font-color: #000;
  --bg-color: #fff;
  --heading-color: #000;
  --highlight-color: #ffe74c;
  --hr-color: #eee;
  --writing-body: #444;
  --uses-secondary-color: #bbb;
}

[data-theme="dark"] {
  --primary-color: #9a97f3;
  --secondary-color: rgba(204, 204, 204, 0.863);
  --font-color: #fff;
  --bg-color: #010101;
  --heading-color: #fff;
  --highlight-color: #267b9c;
  --hr-color: #222;
  --writing-body: #ccc;
}

::-moz-selection {
  background: var(--highlight-color);
}

::selection {
  background: var(--highlight-color);
}

html {
  font-family: "Inter", sans-serif;
  overflow-x: hidden;
}

body {
  background-color: var(--bg-color);
  color: var(--font-color);
  margin: 0;
  padding: 0;
}

* {
  transition: background 0.2s linear;
}

.top-menu {
  margin: 20px 10px 0;
}

.top-menu ul {
  margin: 3px 0 0 10px;
  padding: 0;
}

.menubar {
  /**/
}

@media (max-width: 520px) {
  .menubar {
    overflow-x: scroll;
  }
}

.top-menu ul li {
  display: inline;
  margin-right: 5px;
}

.top-menu ul li a {
  color: var(--heading-color);
  font-family: ibm-plex-mono, Monaco, "Lucida Console";
  padding: 0 0 3px;
  text-decoration: none;
  font-size: 12px;
  text-transform: uppercase;
  padding: 3px 10px 5px;
  border-radius: 4px;
}

.top-menu ul li a:hover {
  background: var(--heading-color);
  color: var(--bg-color);
}

.theme-switch-button {
  border: none;
  background: none;
  cursor: pointer;
  cursor: hand;
  color: var(--heading-color);
  outline: 0;
}

.theme-switch-button svg {
  fill: var(--heading-color);
}

.amp {
  font-family: Baskerville, "Goudy Old Style", Palatino, "Book Antiqua", serif;
  font-style: italic;
  font-weight: normal;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: var(--heading-color);
}

.blog-title {
  font-weight: 700;
  font-size: 80px;
  letter-spacing: -0.2rem !important;
  text-align: center;
  margin: 100px 0 50px;
}

.dynamicCenter {
  text-align: center;
}

@media (max-width: 500px) {
  .blog-title {
    font-size: 65px;
    text-align: left;
    margin: 100px 0 50px 14px;
  }

  .dynamicCenter {
    text-align: center;
    margin: 0px 0 0px -10px;
  }
}

.writing-row a {
  text-decoration: none;
}

.writing-row span {
  display: inline-flex;
  align-items: center;
}

.writing-row {
  padding: 20px;
}

.writing-row a {
  color: var(--heading-color);
  display: inline-block;
  padding: 5px 0;
  position: relative;
  margin-top: 10px;
}

.writing-row a:before {
  content: "";
  position: absolute;
  width: 100%;
  height: 3px;
  top: 0;
  left: 0;
  background-color: var(--highlight-color);
  transform: scaleX(0);
  transform-origin: top left;

  transition: transform 0.3s;
}

.writing-row a:after {
  content: "";
  position: absolute;
  width: 100%;
  height: 3px;
  bottom: 0;
  right: 0;
  background-color: var(--highlight-color);
  transform: scaleX(0);
  transform-origin: bottom right;

  transition: transform 0.3s;
}

.writing-row a:hover:before {
  transform-origin: top right;
  transform: scaleX(1);
}

.writing-row a:hover:after {
  transform-origin: bottom left;
  transform: scaleX(1);
}

.writing-row .writing-date {
  padding-right: 20px;
  font-size: 14px;
  color: var(--secondary-color);
}

.writing-row .writing-title {
  font-weight: 600;
  font-size: 20px;
  line-height: 1.9em;
}

.writing-title-h1,
.uses-h1,
.about-h1 {
  font-weight: 700;
  font-size: 56px;
  letter-spacing: -0.1rem;
  margin: 50px 0 30px;
}

@media (max-width: 400px) {
  .writing-title-h1,
  .uses-h1,
  .about-h1 {
    font-size: 48px;
  }
}

@media (max-width: 300px) {
  .writing-title-h1,
  .uses-h1,
  .about-h1 {
    font-size: 40px;
  }
}

.about-h1 {
  margin-bottom: 60px;
  font-size: 72px;
}

/* writing-container {
  overflow-x: scroll !important;
} */

.writing-container h1,
.writing-container h2,
.writing-container h3,
.writing-container h4,
.writing-container h5,
.writing-container h6 {
  letter-spacing: -1px;
}

img.writings {
  margin: 15px 0px;
}

.writing-container img,
img.nice {
  width: 100%;
  border-radius: 13px;
  -webkit-border-radius: 13px;
  -moz-border-radius: 13px;
  -ms-border-radius: 13px;
  -o-border-radius: 13px;
  translate: scale(1);
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  -o-transform: scale(1);
  transition: all 0.6s;
  -webkit-transition: all 0.6s;
  -moz-transition: all 0.6s;
  -ms-transition: all 0.6s;
  -o-transition: all 0.6s;
}

.writing-container img:hover,
img.nice:hover {
  translate: scale(1.03);
  -webkit-transform: scale(1.03);
  -moz-transform: scale(1.03);
  -ms-transform: scale(1.03);
  -o-transform: scale(1.03);
  /* box-shadow: 3px 3px 20px var(--highlight-color); */
}

.writing-container ul {
  margin: 0;
  padding: 0 0 30px 20px;
  list-style: circle;
}

.writing-container ul li {
  padding: 4px 0;
  line-height: 1.8em;
  font-size: 20px;
  color: var(--writing-body);
}

span.darker {
  color: var(--writing-body);
}

.writing-container > blockquote {
  border-left: 5px var(--highlight-color) solid;
  background: var(--highlight-color);
  font-style: italic;
  margin: 0;
  margin-bottom: 40px;
  padding: 30px 30px;
  font-size: 18px;
  line-height: 40px;
}

.writing-container > p {
  line-height: 1.8em;
  margin-bottom: 40px;
  font-size: 20px;
  color: var(--writing-body);
}

.writing-container *:not(pre) > code {
  font-family: ibm-plex-mono, Monaco, "Lucida Console";
  background: var(--highlight-color);
  color: var(--heading-color);
  padding: 3px 7px 6px;
  border-radius: 4px;
  line-height: 1em;
  font-size: 16px;
  display: inline-flex;
}

hr {
  border: none;
  border-top: 1px var(--hr-color) solid;
  margin: 45px 0;
}

.writing-container a,
.card a,
.twitter-follow a {
  color: var(--heading-color);
  text-decoration: none;
  border-bottom: 1px var(--heading-color) dashed;
}
/* ... */

